# dartc

./: CMakeLists.txt  LICENSE  README.md
include/dartc/: common.h  simulation.h  skeleton.h
src/: CMakeLists.txt  SkeletonManager.cpp  SkeletonManager.hpp  common.cpp  simulation.cpp  skeleton.cpp
tests/: CMakeLists.txt  test_dartc_simulation.cpp  test_dartc_skeleton.cpp
